<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/weibo_header_margin_left"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/weibo_avatar_margin_left"
            android:layout_marginTop="@dimen/weibo_avatar_margin_top"
            android:background="@drawable/avatar_background"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/weibo_username_margin_left"
            android:layout_marginTop="@dimen/weibo_username_margin_top"
            android:text="@string/account_name"
            android:textColor="@color/username_text_color"
            android:textSize="@dimen/weibo_username_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/weibo_username_margin_left"
            android:layout_marginTop="@dimen/weibo_time_margin_top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/post_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/post_time"
                android:textSize="@dimen/weibo_time_size" />

            <TextView
                android:id="@+id/post_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_between_time_device"
                android:text="@string/weibo_device"
                android:textSize="@dimen/weibo_time_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/size_between_time_device"
            android:layout_marginTop="@dimen/size_between_time_device"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/repost_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/comment_margin_top"
                android:src="@mipmap/ic_open_in_new_black_24dp" />

            <TextView
                android:id="@+id/repost_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_between_time_device"
                android:text="@string/comment_count"
                android:textColor="@color/light_black" />

            <ImageView
                android:id="@+id/comment_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/comment_margin_top"
                android:src="@mipmap/ic_chat_bubble_outline_black_24dp" />

            <TextView
                android:id="@+id/comments_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_between_time_device"
                android:text="@string/comment_count"
                android:textColor="@color/light_black" />

            <ImageView
                android:id="@+id/like_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/comment_margin_top"
                android:src="@mipmap/ic_favorite_border_black_24dp" />

            <TextView
                android:id="@+id/like_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_between_time_device"
                android:text="@string/comment_count"

                android:textColor="@color/light_black" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>