<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:fitsSystemWindows="true"
    android:transitionName="large image"
    tools:context="com.danlvse.weebo.ui.ImagesDetailActivity">

    <uk.co.senab.photoview.PhotoView
        android:id="@+id/image_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_centerVertical="true" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/transparent"
        app:navigationIcon="@mipmap/ic_arrow_back_white_24dp"
        app:titleTextColor="#ffffff"></android.support.v7.widget.Toolbar>

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/loading_progress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        app:matProg_barColor="@color/colorAccent"
        app:matProg_progressIndeterminate="true" />

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/weibo_header_margin_left"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/weibo_avatar_margin_left"
                    android:layout_marginTop="@dimen/weibo_avatar_margin_top"
                    android:background="@drawable/avatar_background"
                    android:src="@mipmap/ic_person_white_24dp" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/weibo_username_margin_left"
                    android:layout_marginTop="@dimen/weibo_username_margin_top"
                    android:text="@string/account_name"
                    android:textColor="@color/white"

                    android:textSize="@dimen/weibo_username_size" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/weibo_username_margin_left"
                    android:layout_marginTop="@dimen/weibo_time_margin_top"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/post_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post_time"
                        android:textColor="@color/white"
                        android:textSize="@dimen/weibo_time_size" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/images_detail_like_margin_right"
                    android:layout_marginTop="@dimen/images_detail_like_margin_right"

                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/add_like"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/images_detail_like_margin_right"

                        android:src="@mipmap/ic_thumb_up_white_24dp" />

                    <TextView
                        android:id="@+id/like_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/comment_count"

                        android:textColor="@color/white" />

                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
